--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "olamedia/nokogiri",
+    "name": "dukemb/nokogiri",
     "type": "library",
     "description": "HTML Parser",
     "keywords": ["html","parse","parser"],
-    "homepage": "http://github.com/olamedia/nokogiri",
+    "homepage": "http://github.com/dukemb/nokogiri",
     "license": "MIT",
     "authors": [
         {
